--- a/website/package.json
+++ b/website/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://0.0.0.0:5019",
   "name": "website",
   "version": "0.1.0",
   "private": true,
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.6.1"
   }
 }
