--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,4 @@
 {
-  "proxy": "http://0.0.0.0:5019",
   "name": "website",
   "version": "0.1.0",
   "private": true,
@@ -16,8 +15,10 @@
     "mongoose": "^6.2.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-usestateref": "^1.0.8",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
