--- a/website/package.json
+++ b/website/package.json
@@ -17,9 +17,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-usestateref": "^1.0.8",
+    "recharts": "^2.1.10",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4",
