--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.7",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-minimal-pie-chart": "^8.3.0",
