--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "chart.js": "^3.9.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.7",
     "react": "^17.0.2",
